fix: allow no active profile, make ALL the default
Allow to set null / an empty list as active profiles, which means that no profiles are to be deployed and NeonBee will start with the system verticles only.